<resources>
    <string name="app_name">Gads</string>

    <string name="_223_learning_hours_kenya">223 learning hours kenya</string>
    <string name="leaderboard">LEADERBOARD</string>

    <string name="_300_skilliqq_score_egypt">300 Skill IQ Score Egypt</string>
    <string name="submit">Submit</string>
    <string name="john_doe">John doe</string>
    <string name="project_on_github_link">Project on GITHUB(link)</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="email_address">Email Address</string>
    <string name="todo">TODO</string>
    <string name="are_you_sure">Are you sure </string>
    <string name="yes">Yes</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
</resources>