<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nad"
    tools:context=".submitActivity"
    tools:visibility="visible">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="282dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group"
        android:contentDescription="@string/todo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="166dp"
        android:layout_height="50dp"
        android:layout_marginTop="300dp"
        android:background="#ffff"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_firstName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffff"
            android:hint="@string/firstname"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#070707"
            android:textColorHint="#A4A6B5"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="166dp"
        android:layout_height="50dp"
        android:layout_marginTop="300dp"
        android:background="#ffff"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_lastName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffff"
            android:hint="@string/lastname"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#070707"
            android:textColorHint="#A4A6B5"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="225dp"
            tools:layout_editor_absoluteY="78dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="338dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="288dp"

        android:background="#ffff"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/edit_Emailaddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffff"
            android:hint="@string/email_address"
            android:inputType="textPersonName"
            android:textColor="#070707"
            android:textColorHint="#A4A6B5"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="225dp"
            tools:layout_editor_absoluteY="78dp"
            android:autofillHints="" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="338dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="204dp"
        android:background="#ffff"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry">

        <EditText
            android:id="@+id/edit_GLink"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffff"
            android:hint="@string/project_on_github_link"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#070707"
            android:textColorHint="#A4A6B5"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="200dp"
            tools:layout_editor_absoluteY="78dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="170dp"
        android:layout_height="42dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:layout_marginBottom="88dp"
        android:background="#D7542B"
        app:cardBackgroundColor="#FF9800"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/Send"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textSize="26sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/arrow_back"
        android:layout_width="58dp"

        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:background="#180A0909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />



</androidx.constraintlayout.widget.ConstraintLayout>